Translation work begins for the next folder.

--- a/japan/advance/game.html
+++ b/japan/advance/game.html
@@ -54,7 +54,7 @@ body{
         <div align="left"><font size="2"><img src="image/game_vs.gif" width="100" height="67" align="left"><br>
           If you connect the Game Boy Advance link cable, up to four players can enjoy the game at the same time.<br>
           If you all have a copy of the game, <font color="#FF0000"><b>Multi-Cartridge Battle</b></font>  will be good for you.<br>
-          If you are the only one with a copy, don't worry, <b><font color="#FF0000">One Cartridge Match</font></b> is an enjoyable experience as well!</font></div>
+          If you're the only one with a copy, don't worry, <b><font color="#FF0000">One Cartridge Match</font></b> is an enjoyable experience as well!</font></div>
       </td>
     </tr>
     <tr>
@@ -69,7 +69,7 @@ body{
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">Бе</font></b></font><font color="#FFFFFF" size="2">Б@One Cartridge Match</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">Бе</font></b></font><font color="#FFFFFF" size="2">Single Cartridge Match</font></b></font></td>
           </tr>
           <tr> 
             <td bgcolor="#00CC99"><font size="2">If you have only one cartridge, you can play against each other. In this mode, you collect rings.</font><font size="2"></font></td>
