--- a/japan/advance/top.html
+++ b/japan/advance/top.html
@@ -35,7 +35,7 @@ scrollbar-base-color:#0099ff;
         Publisher: SEGA Corporation (JP), THQ, Inc. (NA), Infogrames Entertainment SA (EU)<br>
         Platform: Game Boy Advance<br>
         Release date: December 20, 2001 (JP), February 3, 2002 (NA), March 8, 2002 (EU)<br>
-        Price:<b> \5,800 (tax included: \6,090) (JP), $39.99 (US),Åí34.99 (UK</b></font><font size="2" color="#000099"><b>)</b><br>
+        Price:<b> \5,800 (\6,090 tax included) (JP), $39.99 (US),Åí34.99 (UK</b></font><font size="2" color="#000099"><b>)</b><br>
         Genre: Action<br>
         Number of players: 1 to 4 players (supports 4 players per cartridge)<br>
         Compatible peripherals: Link Cable<br>
