--- a/japan/sonic3d/sonic3d_image.html
+++ b/japan/sonic3d/sonic3d_image.html
@@ -5,7 +5,7 @@
 
 <table width="620">
 <tr><td align="center" colspan=2 bgcolor="#ff0000" height=32><font size=4 color="#ffffff"><b>
-『SONIC3D  FLICKIES' ISLAND』
+Sonic 3D: Flickies' Island
 </b></font></td></tr></table>
 <p>
 
@@ -17,7 +17,7 @@
 </table>
 <p>
 <font color="#0000ff" font size=4>
-プリレンダリングによる美麗なグラフィックス！<br>
+Beautiful pre-rendered graphics!<br>
 <font>
 <p>
 <table>
@@ -33,7 +33,7 @@
 </table>
 <p>
 <font color="#0000ff" font size=4>
-迫力の３Ｄ「スペシャル・ステージ」もあるぞ！<br>
+There's even an impressive 3D Special Stage!<br>
 <font>
 <p>
 <table>
@@ -44,7 +44,7 @@
 </table>
 <p>
 <font color="#0000ff" font size=4>
-クォーター・ビューの多彩なステージを駆けぬけろ！<br>
+Run through the various stages in an isometric view!<br>
 <font>
   <p> <font size=4 FONT COLOR="RED"> <A HREF="index.html">戻る</A></FONT><BR>
 
@@ -52,7 +52,7 @@
 <table width="620">
 <tr><td height=16 colspan=2></td>
 <tr><td align="center" colspan=2 bgcolor="red"><font size=2 color="#ffffff">
-｜　Presented By 　<b>SONIC TEAM 1999</b>　｜
+｜　Presented By <b>Sonic Team 1999</b>　｜
 </font></td>
 
 </table>
