Fix-up the sonic3d folder!

--- a/japan/sonic3d/index.html
+++ b/japan/sonic3d/index.html
@@ -16,11 +16,11 @@ Sonic 3D: Flickies' Island
     <td height=60 colspan=2>
       <div align="center"><font color="#ff0000" size=2>Sonic 3D: Flickies' Island<br>
         <BLINK>Platform: Sega Saturn</BLINK><br>
-        Release date: October 14, 1999<br>
-        Price: \3,800 (\3,990 including tax)</font><br>
+        Release date: November 1996 (NA), February 14, 1997 (EU), October 14, 1999 (JP)<br>
+        Price: 3,800 yen (3,990 yen including tax) (JP), Unknown (NA), 44.99 pounds (UK)</font><br>
       </div>
       <P align="center"> <a href="http://www.d-direct.ne.jp/"> </a><a href="http://www.d-direct.ne.jp/"><font color="#ff0000"><blink></blink></font></a><br>
-      <P align="center"> <font color="#0000ff" font size=4>Å°Sonic 3D for the Sega Saturn is finally here!Å°</font><br>
+      <P align="center"> <font color="#0000ff" font size=4>Sonic 3D for the Sega Saturn is finally here!</font><br>
       <P align="center">Sonic fans in Japan have been waiting a long time!<br>
         After being released in the US and Europe. Sonic 3D is finally ready to be delivered to people in Japan.<br>
         Oh, and it's being released at the same time as Sonic Adventure International on the Dreamcast!<br>
@@ -37,7 +37,7 @@ Sonic 3D: Flickies' Island
           </tr>
         </table>
       </div>
-      <p align="center"> <font color="#0000ff" font size=4>Å°Protect Flickies from Dr. Robotnik!Å°</font><br>
+      <p align="center"> <font color="#0000ff" font size=4>Protect Flickies from Dr. Robotnik!</font><br>
       <P align="center">Chaos Emerald, a beatiful gem with mystical powers.<br>
       <P align="center">One day, Sonic, Tails, and Knuckles are visiting a mysterious island. <font color="#ff00ff">Flicky Island </font>is its name.<br>
         According to legend, the <font color="#ff00ff">Chaos Emeralds </font>lie dormant on this island.<br>
@@ -52,7 +52,7 @@ Sonic 3D: Flickies' Island
       <table width="620" align="center">
         <tr><td height=16 colspan=2></td>
 <tr><td align="center" colspan=2 bgcolor="red"><font size=2 color="#ffffff">
-ÅbÅ@Presented By <b>Sonic Team 1999</b>Å@Åb
+Presented By <b>Sonic Team 1999</b>
 </font></td>
 
 </table>
