--- a/japan/sonic3d/sonic3d_image.html
+++ b/japan/sonic3d/sonic3d_image.html
@@ -46,13 +46,13 @@ There's even an impressive 3D Special Stage!<br>
 <font color="#0000ff" font size=4>
 Run through the various stages in an isometric view!<br>
 <font>
-  <p> <font size=4 FONT COLOR="RED"> <A HREF="index.html">–ß‚é</A></FONT><BR>
+  <p> <font size=4 FONT COLOR="RED"> <A HREF="index.html">Return</A></FONT><BR>
 
 
 <table width="620">
 <tr><td height=16 colspan=2></td>
 <tr><td align="center" colspan=2 bgcolor="red"><font size=2 color="#ffffff">
-b@Presented By <b>Sonic Team 1999</b>@b
+Presented By <b>Sonic Team 1999</b>
 </font></td>
 
 </table>
