A few extra updates.

--- a/JokeVideos/index.html
+++ b/JokeVideos/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 <h1>Joke Videos I made</h1>
-<p>Joke videos I have made through 2020 (nothing was funny about 2020)</p>
+<p>Joke videos I have made (or seen, in the case of top 10 not fat foxes) through 2020 (nothing was funny about 2020).</p>
 <p><a href=Penguins-of-Madagascar-FULL-MOVIE-2020.mp4>Early version of a joke video I made. I fucking hate the Persona series, I'm afraid.</a></p>
 <p><a href=Penguins-of-Madagascar-WATCHFREECARTOONS-FULL-MOVIE-2020.mp4>The version I actually played, when we planned to watch the entirety of the Penguins in Madagascar movie. It happened, but not before I pissed myself laughing.</a></p>
-<p><a href=zen.mp4>"top 10 not fat foxes". The video that began the Top Ten Tailses series.</a></p>
+<p><a href=zen.mp4>"top 10 not fat foxes"</a> The video that began the Top Ten Tailses series. Was made by <a href=https://twitter.com/AgentZennifer>Zen.</a></p>
 <p><a href=TopTenTailses1.7z>Top Ten Tailses 1 production materials. This actually came about after the video above was sent to me.</a></p>
 <p><a href=TopTenTailses2.7z>Top Ten Tailses 2 production materials.</a></p>
 <p><a href=TopSixNuclids.7z>Top Six Nuclids production materials. This was made during a Discord call with RadiantNexus team members. It was fucking hilarious seeing the suggestions.</a></p>
