--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
 <body>
 <h1>Tobi's GitHub Page</h1>
-<p>Hello. Here you will find old Sonic fansites as they were 20 years ago:</p>
-<p><a href=/ratsonic/sonic/index.html>Rat.org Backup</a></p>
+<h2>Hello. Here's some links to stuff I mirror here.</h2>
+<p><a href=/ratsonic/sonic/index.html>Rat.org</a></p>
 <p><a href=/sonichq>Sonic HQ</a></p>
 <p><a href=/sonicstadium/topcities>Sonic Stadium</a></p>
+<h2>The following are translated from the official Sonic site in Japan. I do not own these.</h2>
+<p><!--<a href=/japan/sonic3d>-->Sonic 3D: Flickies' Island / Sonic 3D Blast (Saturn)</a></p>
+<p><!--<a href=/japan/sonicjam>-->Sonic Jam (Saturn)</a></p>
+<p><!--<a href=/japan/sonicr>-->Sonic R (Saturn)</a></p>
+<p><!--<a href=/japan/sonicadv>-->Sonic Adventure (Dreamcast)</a></p>
+<p><!--<a href=/japan/sonicadv_int>-->Sonic Adventure International (Dreamcast)</a></p>
+<p><!--<a href=/japan/sonicadv2>-->Sonic Adventure 2 (Dreamcast)</a></p>
+<p><!--<a href=/japan/advance>-->Sonic Advance (Game Boy Advance)</a></p>
+<h2><a href=/JokeVideos>and here's a useless section regarding joke videos that I made (except for one).</a></h2>
 </body>
 </html>
