--- a/japan/sonicadv/index.html
+++ b/japan/sonicadv/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>SONIC ADVENTURE</title>
+<title>Sonic Adventure</title>
 
 <STYLE TYPE="text/css">
 <!--
@@ -27,8 +27,8 @@ BODY {
       <table width="640" border="0" cellspacing="1" cellpadding="1" bgcolor="#ffff00" align="center">
         <tr>
           <td>
-            <div align="center"><font face="Comic Sans MS"><b>SONIC 
-              ADVENTURE </b></font></div>
+            <div align="center"><font face="Comic Sans MS"><b>Sonic 
+              Adventure </b></font></div>
           </td>
         </tr>
       </table>
@@ -42,150 +42,148 @@ BODY {
     <td height="20" align="center" bgcolor="#002288" class="style3">  
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>新しいコーナーができました！必見！<br>
-      </b><a href="snd/index.html"><b>ソニックアドベンチャーサウンドのページ</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>We have a new section! Must see!<br>
+      </b><a href="snd/index.html"><b>Sonic Adventure Sound Page</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>「ソニック 
-      アドベンチャー」発売記念イベント<br>
-      </b><a href="info/news1225.html"><b>は、こんな感じだったよ。</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Sonic Adventure Launch Event <br>
+      </b><a href="info/news1225.html"><b>was like this.</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>「ソニック 
-      アドベンチャー」完成！<br>
-      </b><a href="info/news1218.html"><b>で、ちょっとおしらせ</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Sonic Adventure is complete!<br>
+      </b><a href="info/news1218.html"><b>So, a little news.</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>これ知ってた？<br>
-      </b><a href="info/hekiga/hekiga0.html"><b>渋谷スペイン坂のソニック</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Did you know this?<br>
+      </b><a href="info/hekiga/hekiga0.html"><b>Sonic in Shibuya Spainzaka</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>音楽ＣＤ第二弾！まもなく発売！<br>
-      </b><a href="info/cd_vocalmini.html"><b>ソニックアドベンチャーのヴォーカルミニアルバム<br>
+    <td height="40" align="center" valign="center" class="style3"> <b>Music CD Vol. 2! Coming soon!<br>
+      </b><a href="info/cd_vocalmini.html"><b>Sonic Adventure's Vocal Mini Album<br>
       ["Songs With Attitude"]</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>「続」緊急告知！<br>
-      </b><a href="info/advnews1106.html"><b>ソニックアドベンチャーＣＦ<br>
-      放映が増えました！</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Urgent announcement!<br>
+      </b><a href="info/advnews1106.html"><b>Sonic Adventure CF<br>
+      is getting more airtime!</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>おまたせ！<br>
-      </b><a href="dload/cfvol1.html"><b>ソニックアドベンチャーＣＦ<br>
-      ダウンロード開始！</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Here you go!<br>
+      </b><a href="dload/cfvol1.html"><b>Sonic Adventure CF<br>
+      Download started!</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>歌ってね！<br>
-      </b><a href="dload/advtheme.html"><b>メインテーマの歌詞を公開！<br>
+    <td height="40" align="center" valign="center" class="style3"> <b>Sing it!<br>
+      </b><a href="dload/advtheme.html"><b>Lyrics to the main theme released!<br>
       [SONICTEAM "PowerPlay"]</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>まもなく発売！キミはもう予約した？<br>
-      </b><a href="info/cd_teambest2.html"><b>ソニックチームのベストアルバム<br>
+    <td height="40" align="center" valign="center" class="style3"> <b>It's almost here! Have you pre-ordered yours yet?<br>
+      </b><a href="info/cd_teambest2.html"><b>Sonic Team's Best Album<br>
       [SONICTEAM "PowerPlay"]</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>最新画像を公開！<br>
-      </b><a href="shot/shot_advss.html"><b>「アドベンチャーフィールド特集(１)」</b></a> 
+    <td height="40" align="center" valign="center" class="style3"> <b>Latest images released!<br>
+      </b><a href="shot/shot_advss.html"><b>Adventure Field Feature (1)</b></a> 
     </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>好評につき第二弾！<br>
-      </b><a href="chao/chao1102.html"><b>「チャオの最新画像」</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Second one by popular demand!<br>
+      </b><a href="chao/chao1102.html"><b>Chao's latest images</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>恒例！<br>
-      </b><a href="dload/omake1102.html"><b>おまけ壁紙ダウンロード！</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Always!<br>
+      </b><a href="dload/omake1102.html"><b>Extra wallpaper download!</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>ダウンロードして観ちゃおう！<br>
-      </b><a href="dload/mov1009.html"><b>ソニックアドベンチャー最新ムービー</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Let's download it and watch it!<br>
+      </b><a href="dload/mov1009.html"><b>Sonic Adventure Latest Movie</b></a> </td>
   </tr>
   <tr> 
-    <td height="40" align="center" valign="center" class="style3"> <b>ビジュアルメモリー初のＲＰＧ！東京ゲームショウでも公開<br>
-      </b><a href="chao/chao1009.html"><b>”チャオ”ってな～に？</b></a> </td>
+    <td height="40" align="center" valign="center" class="style3"> <b>Visual Memory's first RPG to be shown at the Tokyo Game Show!<br>
+      </b><a href="chao/chao1009.html"><b>What's a "Chao"?</b></a> </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <b>これが最後！<br>
-      </b><a href="info/buppan1.html"><b>「ソニックアドベンチャー制作発表会」限定グッズ発売！</b></a> 
+    <td width="640" height="40" align="center" valign="center" class="style3"> <b>This is the last one!<br>
+      </b><a href="info/buppan1.html"><b>Sonic Adventure Production Announcement: Limited Edition Goods on Sale!</b></a> 
     </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <b>ついに！<br>
-      </b><a href="info/cd_teambest.html"><b>「ソニックチームベストアルバム」発売決定！</b></a> 
+    <td width="640" height="40" align="center" valign="center" class="style3"> <b>At last!<br>
+      </b><a href="info/cd_teambest.html"><b>Sonic Team Best Album will be released!</b></a> 
     </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <a href="shot/stage922.html"><b>最新ゲーム画面を追加！</b></a> 
+    <td width="640" height="40" align="center" valign="center" class="style3"> <a href="shot/stage922.html"><b>Added the latest game screens!</b></a> 
     </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <a href="info/822osarai.html"><b>発表会のおさらい（Withレア画像）</b></a> 
+    <td width="640" height="40" align="center" valign="center" class="style3"> <a href="info/822osarai.html"><b>Review of the presentation (With rare images)</b></a> 
     </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/newsonic.html">これが新しいソニックのデザイン！</a></b>      </td>
+    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/newsonic.html">This is the new Sonic design!</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/screen822.html">そして画面写真も公開！</a></b>      </td>
+    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/screen822.html">And now we have screen shots!</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/presonic.html">新しいソニックのデザインはどうなる？</a></b>      </td>
+    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/presonic.html">What will be the design of the new Sonic?</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/jikki.html">ドリームキャストで動いてるぞ！！</a></b>      </td>
+    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/jikki.html">It's running on a Dreamcast!</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3"> <b>最終回！<a href="info/nanbei3.html">[連載]ソニックチーム南米に行く（４）</a></b>      </td>
+    <td width="640" height="40" align="center" class="style3"> <b>Last episode!<a href="info/nanbei3.html">[Serial] Sonic Team Goes to South America (4)</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/818pc.html">本日の最新画像を一点発表！</a></b>      </td>
+    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/818pc.html">One of the latest images of the day!</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3"> <b><a href="info/nanbei2.html">[連載]ソニックチーム南米に行く（３）</a></b>      </td>
+    <td width="640" height="40" align="center" class="style3"> <b><a href="info/nanbei2.html">[Serial] Sonic Team Goes to South America (3)</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="70" align="center" valign="center" class="style3"> <b>いろんな事情で行けないあなたに朗報！<br>
-    [発表会インターネット中継]やります！！<br>
-    </b>会場の興奮を少しでも味わってね。おうちで盛り上がろう！ 
+    <td width="640" height="70" align="center" valign="center" class="style3"> <b>Good news for those of you who can't make it for various reasons!<br>
+    We're going to do a live webcast of the presentation!<br>
+    </b>Enjoy a little of the excitement of the event. Let's have a good time at home! 
     </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3"> <b><a href="info/houkoku817.html"><b>発表会の準備は順調だよ！</b></a> 
+    <td width="640" height="40" align="center" class="style3"> <b><a href="info/houkoku817.html"><b>preparations for the presentation are going well!</b></a> 
       </b></td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3"> <b><a href="info/maintheme.html">メインテーマ曲　発表会バージョン！</a></b>      </td>
+    <td width="640" height="40" align="center" class="style3"> <b><a href="info/maintheme.html">Main theme song, recitl version!</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3"> <b><a href="info/nanbei1.html">[連載]ソニックチーム南米に行く（２）</a></b>      </td>
+    <td width="640" height="40" align="center" class="style3"> <b><a href="info/nanbei1.html">[Serial] Sonic Team Goes to South America (2)</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3">      <a href="info/advlogo.html"><b>「ＳＯＮＩＣ Ａｄｖｅｎｔｕｒｅ」タイトルロゴ決定！</b></a> </td>
+    <td width="640" height="40" align="center" class="style3">      <a href="info/advlogo.html"><b>Sonic Adventure title logo decided!</b></a> </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3">      <a href="info/822cf.html"><b>発表会告知ＣＦいよいよ開始！</b></a> </td>
+    <td width="640" height="40" align="center" class="style3">      <a href="info/822cf.html"><b>Announcement CF finally started!</b></a> </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3">      <a href="info/happyoukai_add0.html"><b>発表会追加情報！</b></a> </td>
+    <td width="640" height="40" align="center" class="style3">      <a href="info/happyoukai_add0.html"><b>Additional information on the presentation!</b></a> </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3"> <a href="info/nanbei0.html"><b>[連載？]ソニックチーム南米に行く</b></a>      </td>
+    <td width="640" height="40" align="center" class="style3"> <a href="info/nanbei0.html"><b>[Serial?] Sonic Team Goes to South America</b></a>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3">      <a href="info/happyoukai.html"><b>８月２２日「ＳＯＮＩＣ Ａｄｖｅｎｔｕｒｅ 制作発表会」</b></a>  
+    <td width="640" height="40" align="center" class="style3">      <a href="info/happyoukai.html"><b>August 22 Sonic Adventure Production Presentation</b></a>  
     </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3">      <a href="info/train.html"><b>今日から！「ソニックが山手線をジャック！」</b></a>  </td>
+    <td width="640" height="40" align="center" class="style3">      <a href="info/train.html"><b>Starting today! Sonic will hijack the Yamanote Line!</b></a>  </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3">      <a href="info/omake0716.html"><b>恒例！「おまけのページ」</b></a>  </td>
+    <td width="640" height="40" align="center" class="style3">      <a href="info/omake0716.html"><b>The usual! Extra pages.</b></a>  </td>
   </tr>
 </table>
 <center class="style3">
 <br>
-<a href="http://www.sonicteam.com/" target="_top"><strong>&lt;&lt; 戻る &gt;&gt;</strong></a>
+<a href="http://www.sonicteam.com/" target="_top"><strong>&lt;&lt;Return&gt;&gt;</strong></a>
 </center>
 </body>
 
