--- a/japan/sonicadv/chao/chao1009.html
+++ b/japan/sonicadv/chao/chao1009.html
@@ -16,14 +16,14 @@
 
 <tr>
       <td bgcolor="red" align="center" colspan=2> <font size=5 face="ＤＦＰPOP体" color="white"> 
-        <font size="4">チャオってな～に？ </font></font></td>
+        <font size="4">What is a Chao?</font></font></td>
     </tr>
 
 <tr>
 
-      <td> <font size=3> <font size="2">Ａ－ＬＩＦＥの「Ａ」とは、英語の「ＡＲＴＩＦＩＣＩＡＬ＝人工の」のことです。<br>
-        生命に特有な現象をコンピュータや機械を使って再現しようと、世界中の科学者が１０年ほど前から取り組んでいる、 まだ新しい研究分野です。<br>
-        今回の「チャオ」はこのＡ－ＬＩＦＥの理論をゲーム用にアレンジしたものです。 </font> </font></td>
+      <td> <font size=3> <font size="2">The "A" in A-LIFE stands for ARTIFICIAL in English.<br>
+        This is a new research field that scientists around the world have been working on for about 10 years, trying to reproduce the phenomena unique to life using computers and machines.<br>
+        This time, Chao is the adapation of the A-LIFE theory for games.</font> </font></td>
 
 <td>
 
@@ -43,20 +43,19 @@
 
 <td><img src="img/chaoshot1009.jpg" width="320" height="240" border=1 vspace=8 hspace=4></td>
 
-      <td> <font size="2">「チャオ」はソニックアドベンチャー世界のいたるところで、人間達と共存している不思議な生き物です。<br>
-        チャオには他の動物の特技や、体の特徴を取り込んで自分の姿を変化させるという性質があり、 このためその姿形、性格、行動はまさに千差万別です。</font>
-        <p><font size="2"> ゲーム中の各アドベンチャーステージには、「チャオ・ガーデン」という場所があり、プレイヤーはここで チャオといろいろなコミュニケーションを取って彼らを育てていくことになります。</font>
+      <td> <font size="2">Chaos are mysterious creatures that coexist with humans throughout the Sonic Adventure world.<br>
+        Chao have a tendency to take the skills and physical characteristics of other animals and transform into their own form, so their appearance, personality, and behavior are truly unique.</font>
+        <p><font size="2">In each Adventure Field of the game, there is a Chao Garden where players can communicate with Chao in various ways to raise them.</font>
       </td></tr>
 
 
 
 <tr>
-      <td colspan=2> <font size="2">ナイツのＡ－ＬＩＦＥは繁殖と変化に重点が置かれていましたが、今回のＡ－ＬＩＦＥ「チャオ」は更に加えて、 
-        プレイヤーキャラクターとの双方向コミュニケーションの実現を目指しています。<br>
-        たとえば、プレイヤーキャラとの相性が良いと、アイテムを持ってきてくれたり、擦り寄ってきたり。<br>
-        逆に相性が悪いとアカンベーされたり、石を投げられたりします。<br>
-        つまりプレイヤーからＡ－ＬＩＦＥに対して何かを行うだけでなく、Ａ－ＬＩＦＥのほうからも本当に意志を持つ 生き物のようにプレイヤーに対してのアプローチがある。<br>
-        これが今回のＡ－ＬＩＦＥ「チャオ」の最大の特徴です。 </font></td>
+      <td colspan=2> <font size="2">NiGHTS' A-LIFE has been focused on breeding and change, but this time, A-LIFE Chao aims to go further. The new A-LIFE Chao aims to realize two-way communication with the player character.<br>
+        For example, if they like you enough, they will bring you items and rub up against you.<br>
+        On the other hand, if you are mean to them, you will be abandoned or ignored.<br>
+        In other words, not only does the player do something to A-LIFE, but A-LIFE approaches the player as if it were a living creature with a real will.<br>
+        This is the most important feature of this A-LIFE Chao.</font></td>
     </tr>
 
 </table>
@@ -67,7 +66,7 @@
 
 <tr>
       <td bgcolor="red" align="center" colspan=2> <font size=5 face="ＤＦＰPOP体" color="white"> 
-        <font size="4">ビジュアルメモリー初！ＲＰＧ！ </font> </font></td>
+        <font size="4">Visual Memory's first RPG!</font> </font></td>
     </tr>
 
 <tr><td>
@@ -77,21 +76,21 @@
 </td></tr>
 
 <tr>
-      <td> <font size="2">チャオの中からお気に入りの一匹を、ビジュアルメモリーに入れてドリームキャストから連れ出せます。<br>
-        その日の気分でオサンポするコースを選び、チャオと「メール」のやり取りをしながらゴールを目指す<b>携帯ＲＰＧ</b>！ <br>
-        対戦、交換はもちろん、本体との連動でさらに遊びが広がります。</font>
+      <td> <font size="2">You can take one of your favorite Chao out of the Dreamcast by placing it in the visual memory.<br>
+        Choose the course you'd like to take, and exchange e-mails with your Chao to reach your goal</b>!<br>
+        You can play against other players, exchange games, and even link up the main unit for even more fun.</font>
         <p> 
       </td></tr>
 
 <tr>
       <td bgcolor="black" align="center" colspan=2 height="20"> 
-        <div align="center"><font size=2 color="white"> SONIC TEAM 1998 </font> 
+        <div align="center"><font size=2 color="white">Sonic Team 1998 </font> 
         </div>
       </td></tr>
 
 </table>
 
-  <a href="../index.html"><font size="2">&lt;&lt;戻る&gt;&gt;</font></a> 
+  <a href="../index.html"><font size="2">&lt;&lt;Return&gt;&gt;</font></a> 
 </center>
 
 </body>
