--- a/sonichq/fanfair/edited/artistmenu.html
+++ b/sonichq/fanfair/edited/artistmenu.html
@@ -6,7 +6,7 @@ a {text-decoration:none}
 a:hover {text-decoration:underline}
 </style>
 </head>
-<body background="../../sonichq/images/backgrounds/chaobg.gif">
+<body background="../../images/backgrounds/chaobg.gif">
 
 <table align=center width=90%>
 	<tr align=center>
@@ -17,13 +17,13 @@ a:hover {text-decoration:underline}
 			<table border=0 cellspacing=0 cellpadding=0 width=100%>
 				<tr>
 					<td width=19>
-						<img src=../../sonichq/topleft.gif width=19 height=100%>
+						<img src=../../topleft.gif width=19 height=100%>
 					</td>
 					<td bgcolor=black width=100% align=center valign=top>
 						<img src="title.gif" alt="Hoaxes">
 					</td>
 					<td width=19>
-						<img src=../../sonichq/topright.gif width=19 height=100%>
+						<img src=../../topright.gif width=19 height=100%>
 					</td>
 				</tr>
 			</table>
@@ -65,8 +65,8 @@ a:hover {text-decoration:underline}
 <tr><td bgcolor=000000>&nbsp<br>&nbsp</td><td rowspan=2 width=100% bgcolor=000000 valign=middle><center><br><a href=../../><font color=4B1FFC><b>Back to Sonic HQ Main</b></font></a><br>&nbsp</center></td><td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
 
 <tr valign=bottom>
-<td><img SRC="../../sonichq/bottomleft.gif" BORDER=0 height=20></td>
-<td><img SRC="../../sonichq/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="../../bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="../../bottomright.gif" BORDER=0 height=20></td>
 </tr>
 </table>
 <!--END Bottom----------------------------------------------------------------->
