--- a/japan/sonicadv/chao/chao1102.html
+++ b/japan/sonicadv/chao/chao1102.html
@@ -14,7 +14,7 @@
 
 <tr><td colspan=2 bgcolor="red" align="center"><font size=4 color="white"><b>
 
-チャオの最新画像だよ！
+It's Chao's latest picture!
 
 </b></font></td></tr>
 
@@ -23,10 +23,10 @@
 <td><img src="img/chao_2_6.jpg" width="320" height="240" valign="top">
 
 <br>
-        <font size="2">チャオを持つとゴキゲンです。</font></td>
+        <font size="2">I'm so excited to have Chao!</font></td>
 
       <td><img src="img/chao_2_7.jpg" width="320" height="240" valign="top"> <font size="2"><br>
-        さあ、どこにいこうか？</font></td>
+        Now, where shall we go?</font></td>
 
 </tr>
 
@@ -37,12 +37,12 @@
 <td><img src="img/chao_2_4.jpg" width="320" height="240" valign="top">
 
 <br>
-        <font size="2">「えーい！」こんなチャオとの触れ合いもアリ？</font></td>
+        <font size="2">Is this the kind of interaction you want with Chao? "Yeah!"</font></td>
 
 <td><img src="img/chao_2_5.jpg" width="320" height="240" valign="top">
 
 <br>
-        <font size="2">ソニックを発見！ソニックは大人気。</font></td>
+        <font size="2">We found Sonic! Sonic is very popular.</font></td>
 
 </tr>
 
@@ -53,12 +53,12 @@
 <td><img src="img/chao_2_1.jpg" width="320" height="240" valign="top">
 
 <br>
-        <font size="2">チャオと一緒におさんぽに行こう！</font></td>
+        <font size="2">Let's go for a walk with Chao!</font></td>
 
 <td><img src="img/chao_2_2.jpg" width="320" height="240" valign="top">
 
 <br>
-        <font size="2">ビジュアルメモリーへ転送完了！これで、いつでもチャオと一緒だよ。</font></td>
+        <font size="2">Transger to visual memory complete! Now you have Chao on the go!</font></td>
 
 </tr>
 
@@ -66,13 +66,13 @@
 
 <tr>
       <td bgcolor="#eeeeee" align="center" colspan=2> 
-        <div align="center"><font size="2">SONIC TEAM 1998 </font> </div>
+        <div align="center"><font size="2">Sonic Team 1998 </font> </div>
       </td>
     </tr>
 
 </table>
 
-  <font size="2"><a href="../index.html">&lt;&lt;戻る&gt;&gt; </a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt; </a></font> 
 </center>
 
 </body>
