--- a/japan/sonicadv/dload/mov1009.html
+++ b/japan/sonicadv/dload/mov1009.html
@@ -6,8 +6,8 @@
 <table width="512" border=0>
 <tr>
       <td bgcolor="red" align="center" colspan=2 height=60> <font size=4 face="ＤＦＰPOP体" color="white"><b> 
-        <font size="3">ソニックアドベンチャー最新映像！<br>
-        [SonicAdventure - MovieDownLoad] </font></b></font></td>
+        <font size="3">The latest video from Sonic Adventure!<br>
+        [SonicAdventure - Movie DownLoad] </font></b></font></td>
     </tr>
 <tr>
 <td><img src="advmov1009.jpg" width="240" height="180" border=1></td>
@@ -15,24 +15,24 @@
 
         <table width="320" border=1 cellpadding=0 bgcolor="#eeeeee">
           <tr> 
-            <td><font size="2">画面サイズ</font></td>
-            <td><font size="2">１６０×１２０</font></td>
+            <td><font size="2">Screen Size</font></td>
+            <td><font size="2">160x120</font></td>
           </tr>
           <tr> 
-            <td><font size="2">圧縮</font></td>
-            <td><font size="2">MPEG：フルカラー</font></td>
+            <td><font size="2">Compression</font></td>
+            <td><font size="2">MPEG: Full color</font></td>
           </tr>
           <tr> 
-            <td><font size="2">フレーム数</font></td>
-            <td><font size="2">３０フレーム/秒</font></td>
+            <td><font size="2">Number of frames</font></td>
+            <td><font size="2">30 frames per second</font></td>
           </tr>
           <tr> 
-            <td><font size="2">音質</font></td>
-            <td><font size="2">１６bit２２kHzMono</font></td>
+            <td><font size="2">Sound Quality</font></td>
+            <td><font size="2">16-bit 22kHZ Mono</font></td>
           </tr>
           <tr> 
-            <td><font size="2">時間</font></td>
-            <td><font size="2">３分４０秒</font></td>
+            <td><font size="2">Length</font></td>
+            <td><font size="2">3 minutes 40 seconds</font></td>
           </tr>
           <tr> 
             <td><font size="2">ファイルサイズ</font></td>
@@ -57,11 +57,11 @@
 
 <tr><td bgcolor="black" align="center" colspan=2 height="20">
 <font size=2 color="white">
-SONIC TEAM 1998
+Sonic Team 1998
 </font>
 </td></tr>
 </table>
 </center>
-<div align="center"><a href="../index.html"><font size="2">&lt;&lt;戻る&gt;&gt;</font></a></div>
+<div align="center"><a href="../index.html"><font size="2">&lt;&lt;Return&gt;&gt;</font></a></div>
 </body>
 </html>
