--- a/japan/sonicadv/dload/omake1102.html
+++ b/japan/sonicadv/dload/omake1102.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>[おまけ]壁紙ダウンロード1102</title>
+<title>[Extra] Wallpaper Download 11/02</title>
 
 </head>
 
@@ -14,14 +14,14 @@
 
 <tr>
       <td bgcolor="red" align="center" colspan=2 width="512"> <font size=5 color="white"><b> 
-        <font size="3">今週のおまけ！</font> </b></font> </td>
+        <font size="3">Extra of the week!</font> </b></font> </td>
     </tr>
 
 
 
 <tr>
-      <td colspan=2 bgcolor="#ffffdd"> <font size="2">ひさしぶりに登場、おまけの壁紙ダウンロードだよ！<br>
-        今回は、ソニックとチャオの２ショット！ サイズもちょっと大きめのものを用意したので、ハイエンドマシンのひとも安心！？使ってね！！ </font> 
+      <td colspan=2 bgcolor="#ffffdd"> <font size="2">It's been a while since we've been here, so here's an extra wallpaper download!<br>
+        This time, two shots of Sonic and Chao! We've prepared a slightly larger size, so those of you with high-end machines can relax! Use it!</font> 
       </td>
     </tr>
 
@@ -34,15 +34,15 @@
 <img src="dt_withchao.jpg" width="256" height="190">
 
 </td>
-      <td width="256" height="20" align="center" bgcolor="eeeeee"> <font size="2">画面サイズ： 
+      <td width="256" height="20" align="center" bgcolor="eeeeee"> <font size="2">Screen Size 
         </font></td>
     </tr>
 
 <tr>
       <td width="256" height="170" align="center" bgcolor="white"> <font size=5> 
-        <b> <a href="dt_withchao_1024.lzh"><font size="3">[１０２４×７６８]</font></a> 
-        <p> <font size="3"><a href="dt_withchao_800.lzh">[８００×６００]</a></font>
-        <p> <a href="dt_withchao_640.lzh"><font size="3">[６４０×４８０]</font></a> 
+        <b> <a href="dt_withchao_1024.lzh"><font size="3">[1024x768]</font></a> 
+        <p> <font size="3"><a href="dt_withchao_800.lzh">[800x600]</a></font>
+        <p> <a href="dt_withchao_640.lzh"><font size="3">[640x480]</font></a> 
         </b></font> </td>
     </tr>
 
@@ -54,7 +54,7 @@
 
 <font size=2 color="white">
 
-SONIC TEAM 1998
+Sonic Team 1998
 
 </font>
 
@@ -63,7 +63,7 @@ SONIC TEAM 1998
 </table>
 
 </center>
-<div align="center"><a href="../index.html"><font size="2">&lt;&lt;戻る&gt;&gt;</font></a></div>
+<div align="center"><a href="../index.html"><font size="2">&lt;&lt;Return&gt;&gt;</font></a></div>
 </body>
 
 </html>
