Quick fix for advance

--- a/japan/advance/rule.html
+++ b/japan/advance/rule.html
@@ -26,9 +26,7 @@ body{
     </tr>
     <tr>
       <td>
-        <div align="center"><img src="image/chara_sonic.gif" width="81" height="100">　 
-          <img src="image/chara_tails.gif" width="81" height="100">　 <img src="image/chara_knuckles.gif" width="81" height="100">　 
-          <img src="image/chara_amy.gif" width="81" height="100"> </div>
+        <div align="center"><img src="image/chara_sonic.gif" width="81" height="100">　<img src="image/chara_tails.gif" width="81" height="100"> <img src="image/chara_knuckles.gif" width="81" height="100">　<img src="image/chara_amy.gif" width="81" height="100"> </div>
       </td>
     </tr>
     <tr>
