--- a/forthefuture/history.html
+++ b/forthefuture/history.html
@@ -3,9 +3,8 @@
 <title>SRB20YA Home</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
+<link rel="stylesheet" type="text/css" href="main.css" media="screen" />
 </head>
-
-<body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
 <h1 align="center"><i>2017</i></h1>
 <p align="center">It all starts in May 2017. KrazeeTobi had just came up with his name (thanks to a friend of his) and is a semi-active player in the SRB2 scene. In around October, he would post the first video that would eventually become a distant relative to SRB20YA.</p>
 <h1 align="center"><i>2018</i></h1>
