--- a/forthefuture/home.html
+++ b/forthefuture/home.html
@@ -3,10 +3,8 @@
 <title>SRB20YA Home</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
+<link rel="stylesheet" type="text/css" href="main.css" media="screen" />
 </head>
-
-<body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
 <h2 align="center"><i>To be launched June 2023...</i></h2>
 <p align="center">For The Future is a project by KrazeeTobi. There isn't much going on here, but I promise you that by March, there'll be a bit more on this site.</p>
-</body>
 </html>
