--- a/forthefuture/menu.html
+++ b/forthefuture/menu.html
@@ -3,9 +3,8 @@
 <title>For The Future</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="/favicon.ico">
+<link rel="stylesheet" type="text/css" href="main.css" media="screen" />
 </head>
-
-<body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
 <h1 align="center"><b><i>For The Future Menu</i></b></h1>
 <p align="center"><a href="home.html" target="index">Home</a></p>
 <p align="center"><a href="computers.html" target="index">Section 1</a></p>
