--- a/forthefuture/title.html
+++ b/forthefuture/title.html
@@ -3,9 +3,8 @@
 <title>SRB20YA Viewcount</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
+<link rel="stylesheet" type="text/css" href="main.css" media="screen" />
 </head>
-<body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
-<div id="sfchqfdu9x3lpkxkzyeclcks51g3uhjh4ar"></div><p align="center"><script class="center" type="text/javascript" src="https://counter10.stat.ovh/private/counter.js?c=hqfdu9x3lpkxkzyeclcks51g3uhjh4ar&down=async" async></script></p>
-<p align="center"><b><i>Site by KrazeeTobi. Site version 0.1</i></b></p>
+<p align="center"><b><i>Site by KrazeeTobi. Site version A1.27.11.2021</i></b></p>
 </body>
 </html>
