Revert "This CSS is a fucking shitshow"
This reverts commit c174d469b7dbfe008aab34eca2378216774fc061.

--- a/forthefuture/computers.html
+++ b/forthefuture/computers.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="main.css" media="screen" />
 </head>
 <h2 align="center"><i>July 21st, 2016 to July 20th, 2017</i></h2>
-<a href="com1996.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1996.png" width="400" height="300" alt="1996 desktop screenshot"></a>
+<a href="com1996.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1996.png" width="400" height="300" alt="1996 desktop screenshot"><a>
 <ul>
 <li>CPU: Intel Pentium @ 100/66MHz</li>
 <li>Hard Drive: 1.2GB</li>
@@ -18,7 +18,7 @@
 <li>Operating System: Windows 95 OSR1</li>
 </ul>
 <h2 align="center"><i>July 21st, 2017 to July 20th, 2018</i></h2>
-<a href="com1997.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1997.png" width="512" height="384" alt="1997 desktop screenshot"></a>
+<a href="com1997.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1997.png" width="512" height="384" alt="1997 desktop screenshot"><a>
 <ul>
 <li>CPU: Intel Pentium MMX @ 166/66MHz</li>
 <li>Hard Drive: 3GB (1.99GB on C, 885MB on D)</li>
@@ -30,19 +30,19 @@
 <li>Operating System: Windows 95 OSR2, upgraded to Windows 98</li>
 </ul>
 <h2 align="center"><i>July 21st, 2018 to July 20th, 2019</i></h2>
-<a href="com1998.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1998.png" width="400" height="300" alt="1998 desktop screenshot"></a>
+<a href="com1998.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1998.png" width="400" height="300" alt="1998 desktop screenshot"><a>
 <ul>
-<li>CPU: Intel Pentium II @ 266/66MHz</li>
-<li>Hard Drive: 8.1GB</li>
-<li>Memory: 64MB</li>
-<li>External Storage: 1.44MB floppy, 16X DVD</li>
-<li>Modem: 56K X2</li>
-<li>Display: Trident CYBER9397E, 4MB VRAM, 1024x768 @ 16.7 million colours</li>
-<li>Sound: CS4237B</li>
-<li>Operating System: Windows 95 OSR2.1, upgraded to Windows 98, upgraded to Windows 98 Second Edition</li>
+<li>CPU: Intel Pentium MMX @ 200MHz</li>
+<li>Hard Drive: 3.2GB</li>
+<li>Memory: 32MB</li>
+<li>External Storage: 1.44MB floppy, CD-ROM</li>
+<li>Modem: Yes</li>
+<li>Display: Neomagic MagicGraph128XD, 2MB VRAM, 800x600</li>
+<li>Sound: Yes</li>
+<li>Operating System: Windows 95 OSR2.5, upgraded to Windows 98, upgraded to Windows 98 Second Edition</li>
 </ul>
 <h2 align="center"><i>July 21st, 2019 to July 20th, 2020</i></h2>
-<a href="com1999.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1999.png" width="512" height="384" alt="1999 desktop screenshot"></a>
+<a href="com1999.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1999.png" width="512" height="384" alt="1999 desktop screenshot"><a>
 <ul>
 <li>CPU: Intel Mobile Pentium II @ 300MHz</li>
 <li>Hard Drive: 5.4GB (2GB on C FAT16, 3.4GB on D FAT32)</li>
@@ -51,10 +51,10 @@
 <li>Modem: 56K V90</li>
 <li>Display: NeoMagic MagicMedia256AV, 2.5MB VRAM, 1024x768 @ 16.7 million colours</li>
 <li>Sound: NeoMagic NMA2, 16-bit SoundBlaster Pro support</li>
-<li>Operating System: Windows 98, upgraded to Windows 98 Second Edition</li>
+<li>Operating System: Windows 98, upgraded to Windows 98 SE</li>
 </ul>
 <h2 align="center"><i>July 21st, 2020 to July 20th, 2021</i></h2>
-<a href="com2000.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com2000.png" width="512" height="384" alt="2000 desktop screenshot"></a>
+<a href="com2000.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com2000.png" width="512" height="384" alt="2000 desktop screenshot"><a>
 <ul>
 <li>CPU: Intel Mobile Celeron @ 550MHz</li>
 <li>Hard Drive: 12GB</li>
@@ -66,7 +66,7 @@
 <li>Operating System: Windows 2000</li>
 </ul>
 <h2 align="center"><i>July 21st, 2021<!-- to July 20th, 2022--></i></h2>
-<a href="com2001.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com2001.png" width="700" height="525" alt="2001 desktop screenshot"></a>
+<a href="com2001.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com2001.png" width="700" height="525" alt="2001 desktop screenshot"><a>
 <ul>
 <li>CPU: Intel Mobile Pentium III @ 1.13GHz</li>
 <li>Hard Drive: 48GB</li>
