--- a/forthefuture/index.html
+++ b/forthefuture/index.html
@@ -1,6 +1,9 @@
 <HTML>
 <HEAD>
 <TITLE>SRB20YA Home</TITLE>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="icon" href="favicon.ico">
+<link rel="stylesheet" type="text/css" href="main.css" media="all">
 </HEAD>
 
 <!--<frameset rows='40,*' border='0' frameborder='0' framespacing='0'>
