Let's finally fix this bitch!
Credits to DEJVOSS for telling me to just remove the tags lmao

--- a/forthefuture/menu.html
+++ b/forthefuture/menu.html
@@ -3,7 +3,7 @@
 <title>For The Future</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="/favicon.ico">
-<link rel="stylesheet" type="text/css" href="main.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
 <h1 align="center"><b><i>For The Future Menu</i></b></h1>
 <p align="center"><a href="home.html" target="index">Home</a></p>
