--- a/forthefuture/title.html
+++ b/forthefuture/title.html
@@ -3,8 +3,8 @@
 <title>SRB20YA Viewcount</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="main.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
-<p align="center"><b><i>Site by KrazeeTobi. Site version A1.27.11.2021</i></b></p>
+<p align="center"><b><i>Site by KrazeeTobi. CSS by DEJVOSS; thanks for assistance! Site version A1.27.11.2021</i></b></p>
 </body>
 </html>
