--- a/forthefuture/computers.html
+++ b/forthefuture/computers.html
@@ -3,7 +3,7 @@
 <title>SRB20YA Computers</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="main.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
 <h2 align="center"><i>July 21st, 2016 to July 20th, 2017</i></h2>
 <a href="com1996.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1996.png" width="400" height="300" alt="1996 desktop screenshot"></a>
