The great big fucking update of November 28th, 2021

--- a/forthefuture/computers.html
+++ b/forthefuture/computers.html
@@ -8,74 +8,74 @@
 <h2 align="center"><i>July 21st, 2016 to July 20th, 2017</i></h2>
 <a href="com1996.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1996.png" width="400" height="300" alt="1996 desktop screenshot"></a>
 <ul>
-<li>CPU: Intel Pentium @ 100/66MHz</li>
-<li>Hard Drive: 1.2GB</li>
-<li>Memory: 32MB</li>
-<li>External Storage: CD-ROM</li>
-<li>Modem: None</li>
-<li>Display: WD90C24a Rev. C, 1MB VRAM, 800x600</li>
-<li>Sound: CS4231</li>
-<li>Operating System: Windows 95 OSR1</li>
+<li><font color="#FFFFFF">CPU: Intel Pentium @ 100/66MHz</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Hard Drive: 1.2GB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Memory: 32MB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">External Storage: CD-ROM</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Modem: None</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Display: WD90C24a Rev. C, 1MB VRAM, 800x600</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Sound: CS4231</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Operating System: Windows 95 OSR1</font color="#FFFFFF"></li>
 </ul>
 <h2 align="center"><i>July 21st, 2017 to July 20th, 2018</i></h2>
 <a href="com1997.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1997.png" width="512" height="384" alt="1997 desktop screenshot"></a>
 <ul>
-<li>CPU: Intel Pentium MMX @ 166/66MHz</li>
-<li>Hard Drive: 3GB (1.99GB on C, 885MB on D)</li>
-<li>Memory: 32MB</li>
-<li>External Storage: 1.44MB floppy, 8X CD-ROM</li>
-<li>Modem: V34 to 33K</li>
-<li>Display: Trident CYBER9385, 2MB VRAM, 1024x768 @ 65,536 colours</li>
-<li>Sound: 16-bit audio chip</li>
-<li>Operating System: Windows 95 OSR2, upgraded to Windows 98</li>
+<li><font color="#FFFFFF">CPU: Intel Pentium MMX @ 166/66MHz</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Hard Drive: 3GB (1.99GB on C, 885MB on D)</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Memory: 32MB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">External Storage: 1.44MB floppy, 8X CD-ROM</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Modem: V34 to 33K</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Display: Trident CYBER9385, 2MB VRAM, 1024x768 @ 65,536 colours</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Sound: 16-bit audio chip</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Operating System: Windows 95 OSR2, upgraded to Windows 98</font color="#FFFFFF"></li>
 </ul>
 <h2 align="center"><i>July 21st, 2018 to July 20th, 2019</i></h2>
 <a href="com1998.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1998.png" width="400" height="300" alt="1998 desktop screenshot"></a>
 <ul>
-<li>CPU: Intel Pentium II @ 266/66MHz</li>
-<li>Hard Drive: 8.1GB</li>
-<li>Memory: 64MB</li>
-<li>External Storage: 1.44MB floppy, 16X DVD</li>
-<li>Modem: 56K X2</li>
-<li>Display: Trident CYBER9397E, 4MB VRAM, 1024x768 @ 16.7 million colours</li>
-<li>Sound: CS4237B</li>
-<li>Operating System: Windows 95 OSR2.1, upgraded to Windows 98, upgraded to Windows 98 Second Edition</li>
+<li><font color="#FFFFFF">CPU: Intel Pentium II @ 266/66MHz</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Hard Drive: 8.1GB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Memory: 64MB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">External Storage: 1.44MB floppy, 16X DVD</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Modem: 56K X2</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Display: Trident CYBER9397E, 4MB VRAM, 1024x768 @ 16.7 million colours</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Sound: CS4237B</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Operating System: Windows 95 OSR2.1, upgraded to Windows 98, upgraded to Windows 98 Second Edition</font color="#FFFFFF"></li>
 </ul>
 <h2 align="center"><i>July 21st, 2019 to July 20th, 2020</i></h2>
 <a href="com1999.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com1999.png" width="512" height="384" alt="1999 desktop screenshot"></a>
 <ul>
-<li>CPU: Intel Mobile Pentium II @ 300MHz</li>
-<li>Hard Drive: 5.4GB (2GB on C FAT16, 3.4GB on D FAT32)</li>
-<li>Memory: 64MB</li>
-<li>External Storage: 1.44MB floppy, 2X DVD-ROM</li>
-<li>Modem: 56K V90</li>
-<li>Display: NeoMagic MagicMedia256AV, 2.5MB VRAM, 1024x768 @ 16.7 million colours</li>
-<li>Sound: NeoMagic NMA2, 16-bit SoundBlaster Pro support</li>
-<li>Operating System: Windows 98, upgraded to Windows 98 Second Edition</li>
+<li><font color="#FFFFFF">CPU: Intel Mobile Pentium II @ 300MHz</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Hard Drive: 5.4GB (2GB on C FAT16, 3.4GB on D FAT32)</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Memory: 64MB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">External Storage: 1.44MB floppy, 2X DVD-ROM</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Modem: 56K V90</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Display: NeoMagic MagicMedia256AV, 2.5MB VRAM, 1024x768 @ 16.7 million colours</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Sound: NeoMagic NMA2, 16-bit SoundBlaster Pro support</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Operating System: Windows 98, upgraded to Windows 98 Second Edition</font color="#FFFFFF"></li>
 </ul>
 <h2 align="center"><i>July 21st, 2020 to July 20th, 2021</i></h2>
 <a href="com2000.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com2000.png" width="512" height="384" alt="2000 desktop screenshot"></a>
 <ul>
-<li>CPU: Intel Mobile Celeron @ 550MHz</li>
-<li>Hard Drive: 12GB</li>
-<li>Memory: 64MB</li>
-<li>External Storage: 24X CD-ROM</li>
-<li>Modem: 56K V90</li>
-<li>Display: Silicon Motion Inc. LynxEM4+ SM712, 4MB VRAM, 1024x768 @ 262,000 colours</li>
-<li>Sound: Intel AC97, SoundBlaster Pro support</li>
-<li>Operating System: Windows 2000</li>
+<li><font color="#FFFFFF">CPU: Intel Mobile Celeron @ 550MHz</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Hard Drive: 12GB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Memory: 64MB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">External Storage: 24X CD-ROM</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Modem: 56K V90</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Display: Silicon Motion Inc. LynxEM4+ SM712, 4MB VRAM, 1024x768 @ 262,000 colours</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Sound: Intel AC97, SoundBlaster Pro support</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Operating System: Windows 2000</font color="#FFFFFF"></li>
 </ul>
 <h2 align="center"><i>July 21st, 2021<!-- to July 20th, 2022--></i></h2>
 <a href="com2001.png"><img style="display: block; margin-left: auto; margin-right: auto;" src="com2001.png" width="700" height="525" alt="2001 desktop screenshot"></a>
 <ul>
-<li>CPU: Intel Mobile Pentium III @ 1.13GHz</li>
-<li>Hard Drive: 48GB</li>
-<li>Memory: 128MB</li>
-<li>External Storage: 1.44MB floppy, 8X DVD-ROM</li>
-<li>Modem: 56K V90</li>
-<li>Display: S3 SuperSavage IXC16, 16MB VRAM, 1400x1050 @ 16.7 million colours</li>
-<li>Sound: ICH AC97, SoundBlaster compatible</li>
-<li>Operating System: Windows 2000</li>
+<li><font color="#FFFFFF">CPU: Intel Mobile Pentium III @ 1.13GHz</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Hard Drive: 48GB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Memory: 128MB</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">External Storage: 1.44MB floppy, 8X DVD-ROM</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Modem: 56K V90</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Display: S3 SuperSavage IXC16, 16MB VRAM, 1400x1050 @ 16.7 million colours</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Sound: ICH AC97, SoundBlaster compatible</font color="#FFFFFF"></li>
+<li><font color="#FFFFFF">Operating System: Windows 2000</font color="#FFFFFF"></li>
 </ul>
 <!--PAST LEFTOVERS -KRAZEETOBI 26/05/2021-->
 <!--<h2 align="center"><i><font face="Times New Roman, Times, serif">Desktops</font></i></h2>
