--- a/forthefuture/title.html
+++ b/forthefuture/title.html
@@ -5,6 +5,7 @@
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
-<p align="center"><b><i>Site by KrazeeTobi. CSS by DEJVOSS; thanks for assistance! Site version A1.27.11.2021</i></b></p>
+<p align="center"><font color="#FFFF00"><b><i>Site version A1.211128-1424</i></b>
+<br align="center"><b><i>Site owned by KrazeeTobi. Thanks to DEJVOSS for assisting with CSS issues!</i></b></br></p>
 </body>
 </html>
