Massive update. Added a shit ton of things.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Tobi's GitHub Page</h1>
-<h2>Hello. Here's some links to stuff I mirror here.</h2>
-<p><a href=/ratsonic/sonic/index.html>Rat.org</a></p>
-<p><a href=/sonichq>Sonic HQ</a></p>
-<p><a href=/sonicstadium/topcities>Sonic Stadium</a></p>
-<h2>The following are translated from the official Sonic site in Japan. I do not own these.</h2>
-<p><!--<a href=/japan/sonic3d>-->Sonic 3D: Flickies' Island / Sonic 3D Blast (Saturn)</a></p>
-<p><!--<a href=/japan/sonicjam>-->Sonic Jam (Saturn)</a></p>
-<p><!--<a href=/japan/sonicr>-->Sonic R (Saturn)</a></p>
-<p><!--<a href=/japan/sonicadv>-->Sonic Adventure (Dreamcast)</a></p>
-<p><!--<a href=/japan/sonicadv_int>-->Sonic Adventure International (Dreamcast)</a></p>
-<p><!--<a href=/japan/sonicadv2>-->Sonic Adventure 2 (Dreamcast)</a></p>
-<p><!--<a href=/japan/advance>-->Sonic Advance (Game Boy Advance)</a></p>
-<h2><a href=/JokeVideos>and here's a useless section regarding joke videos that I made (except for one).</a></h2>
-</body>
+<HTML>
+<HEAD>
+<TITLE>TobinnSite</TITLE>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="icon" href="favicon.ico">
+<link rel="stylesheet" type="text/css" href="main.css" media="all">
+</HEAD>
+
+<!--<frameset rows='40,*' border='0' frameborder='0' framespacing='0'>
+<frame src='title.html' name='title' marginwidth='0' marginheight='0' scrolling='auto' noresize>
+<frameset cols='20%,*' border='0' frameborder='0' framespacing='0'>
+<frame src='menu.html' name='links' marginwidth='0' marginheight='0' scrolling='no' noresize>
+<frame src='home.html' name='index' marginwidth='0' marginheight='0' scrolling='no' noresize>
+</frameset>
+</frameset> OLD LAYOUT, DON'T USE ANYMORE!!-->
+
+<frameset cols='20%,*' border='1' frameborder='1' framespacing='0'>
+<frame src='menu.html' name='homemenu' marginwidth='0' marginheight='0' scrolling='false' noresize>
+<frameset rows='*,6%' border='1' frameborder='1' framespacing='0'>
+<frame src='home.html' name='homeindex' marginwidth='0' marginheight='0' scrolling='auto' noresize>
+<frame src='title.html' name='hometitle' marginwidth='0' marginheight='0' scrolling='false' noresize>
+</frameset>
+</frameset>
+
 </html>
