Initial translation work

--- a/japan/sonicjam/sonicjam_pjs.html
+++ b/japan/sonicjam/sonicjam_pjs.html
@@ -93,7 +93,7 @@
 </center>
 <hr>
 <div align="center"><br>
-  <a href="http://www.sonicteam.com/" target="_top"><font size="2"><b>–ß‚é 
+  <a href="http://www.sonicteam.com/" target="_top"><font size="2"><b>Return
   </b></font></a></div>
 </body>
 </html>
