--- a/japan/sonicjam/jammov.html
+++ b/japan/sonicjam/jammov.html
@@ -3,75 +3,75 @@
 <center>
   <img src="gif/jamlogof.gif"><br>
 
-<b>プレビュームービー<br>ダウンロード</b><br>
+<b>Preview Movies <br>Download</b><br>
 
 <hr size=4><br>
-  <!--　ムービー１（JamOP）　-->
+  <!--　Movie 1 （JamOP）　-->
   <b> <img border=1 src="gif/jamop.gif" width=80 height=56><br>
-SONIC JAM<br>Opening Movie
+SONIC JAM <br>Opening Movie
 </b>
 </center><p><center>
 </center>
-レンダリングされたソニックが走る！<br>
-SONIC JAM のオープニングを飾るムービーだ！<p>
+The rendered Sonic running!<br>
+This is the movie that opens SONIC JAM!<p>
 <center>
   <a href="jammov/jop.mov"><img border=1 src="gif/down.jpg" width=80 height=20></a> 
   <table border=1>
 <tr><td><font size=1>
-フレーム
+Video
 </font></td><td><font size=1>
 160×110, 15f/sec
 </font></td>
 <tr><td valign="top"><font size=1>
-圧縮
+Compression
 </font></td><td><font size=1>
 QuickTime<br>
-シネパック 32000色
+Cinepak 32,000 colors
 </font></td></tr>
 <tr><td><font size=1>
-サウンド
+Sound
 </font></td><td><font size=1>
-11kHz, 16bit mono
+11kHz, 16-bit mono
 </font></td></tr>
 <tr><td><font size=1>
-サイズ
+Length and Size
 </font></td><td><font size=1>
 39sec. 2.7Mb
 </font></td></tr>
 
 </table><br>
 
-<!--　ムービー２（FlashSS）　-->
+<!--　Movie 2 （FlashSS）　-->
 
 <hr size=4><br>
   <b> <img border=1 src="gif/jamss.gif" width=80 height=60><br>
-SONIC JAM<br>For<br>Flash Sega Saturn
+SONIC JAM <br>For <br>Flash Sega Saturn
 </b><br>
 
 </center><p><center>
 </center>
-店頭デモ用に編集された、SONIC JAM のすべてを紹介した映像！<p>
+All about SONIC JAM, edited for in-store demo!<p>
 <center>
   <a href="jammov/jss.mov"><img border=1 src="gif/down.jpg" width=80 height=20></a> 
   <table border=1>
 <tr><td><font size=1>
-フレーム
+Video
 </font></td><td><font size=1>
 102×75, 12f/sec
 </font></td>
 <tr><td valign="top"><font size=1>
-圧縮
+Compression
 </font></td><td><font size=1>
 QuickTime<br>
-シネパック 32000色
+Cinepak 32,000 colors
 </font></td></tr>
 <tr><td><font size=1>
-サウンド
+Sound
 </font></td><td><font size=1>
 11kHz, 16bit mono
 </font></td></tr>
 <tr><td><font size=1>
-サイズ
+Length and Size
 </font></td><td><font size=1>
 98sec. 5.3Mb
 </font></td></tr>
