Some more updates.

--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,10 @@
 <h1 align="center"><b><i>TobinnSite Menu</i></b></h1>
 <a href="home.html" target="homeindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="home.png" alt="Home"></a>
 <p></p>
+<a href="about.html" target="homeindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="about.png" alt="About"></a>
+<p></p>
+<a href="radiantnexus/index.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="radiantnexus.png" alt="JP Sonic Sites"></a>
+<p></p>
 <a href="japan.html" target="homeindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="japan.png" alt="JP Sonic Sites"></a>
 <p></p>
 <a href="restore.html" target="homeindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="restore.png" alt="Restorations"></a>
